before refactor
